Fix various minor layout issues.

--- a/static-storage/css_static/_mainLayout.scss
+++ b/static-storage/css_static/_mainLayout.scss
@@ -7,6 +7,7 @@ html, body{
 body{
     background-color: #efecea;
     height: 100%;
+    padding-bottom: 60px; /*for footer*/
 
     /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
     font-family: 'Quicksand', sans-serif;
@@ -85,6 +86,7 @@ a:hover{
     /* ALSO stretched to fill rest of screen*/
     flex-grow: 1;
     flex-basis: auto;
+    padding-bottom: 50px;
     border-left: 1px solid #cfcfcf;
 }
 
@@ -105,6 +107,11 @@ a:hover{
 .headband_wrapper.dark{
     background-color: #2f2f2f;
 }
+.headband_wrapper.with_splash{
+    /* special case where headband has splash image in it*/
+    padding: 0px;
+}
+
 
 
 .headband{
@@ -155,7 +162,9 @@ a:hover{
     display: flex;
     flex-grow: 1; /*will fill the rest of the page */
 
-    margin-top: -60px; /*footer is not part of the flexbox*/
+
+    /*margin-top: -60px; /*footer is not part of the flexbox*/
+    /* using padding-bottom on body instead*/
     
 }
 
@@ -168,7 +177,7 @@ a:hover{
     background-color: #c7c2c2;
     padding: 20px;
  
-    color: #946363;
+    color: #5d4f4f;
 }
 
 
