--- a/static-storage/css_static/_menus.scss
+++ b/static-storage/css_static/_menus.scss
@@ -74,7 +74,7 @@
 /* -------------------------------------- */
 
 .thumb .popup_menu{
-    top: 5px; right: -7px;
+    top: 35px; right: 75px;
 
     transform-origin: top right;
     transform: translate(100%, 0%);
